Make TESTID first input to trace

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -32,9 +32,10 @@ foreach(SIZE_IDX RANGE ${SIZES_IDS_LAST})
     foreach(IO_TYPE_IDX RANGE ${IO_TYPES_IDS_LAST})
         list(GET IO_TYPES ${IO_TYPE_IDX} IO_TYPE)
         list(GET IO_TYPE_IDS ${IO_TYPE_IDX} IO_TYPE_ID)
-        add_custom_target(trace-${IO_TYPE}-${SIZE} COMMAND bash ${TRACE_TRANSFER_METHODS_SH} "${TRACE_TRANSFER_EXEC} ${IO_TYPE_ID} ${SIZE} ${ITER}" ${IO_TYPE}-${SIZE})
-        add_custom_target(parse-${IO_TYPE}-${SIZE} COMMAND bash ${PARSE_TRANSFER_METHODS_SH} ${TRACE_TRANSFER_METHODS_ROOT} ${IO_TYPE}-${SIZE})
-        add_custom_target(prune-${IO_TYPE}-${SIZE} COMMAND bash ${PRUNE_TRANSFER_METHODS_SH} ${TRACE_TRANSFER_METHODS_ROOT} ${IO_TYPE}-${SIZE})
+        set(TEST_ID ${IO_TYPE}-${SIZE})
+        add_custom_target(trace-${IO_TYPE}-${SIZE} COMMAND bash ${TRACE_TRANSFER_METHODS_SH} ${TEST_ID} ${TRACE_TRANSFER_EXEC} ${IO_TYPE_ID} ${SIZE} ${ITER})
+        add_custom_target(parse-${IO_TYPE}-${SIZE} COMMAND bash ${PARSE_TRANSFER_METHODS_SH} ${TRACE_TRANSFER_METHODS_ROOT} ${TEST_ID})
+        add_custom_target(prune-${IO_TYPE}-${SIZE} COMMAND bash ${PRUNE_TRANSFER_METHODS_SH} ${TRACE_TRANSFER_METHODS_ROOT} ${TEST_ID})
     endforeach()
 endforeach()
 
