--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,13 +80,41 @@ set(ITER 100)
 set(REP 1)
 foreach(SIZE ${SIZES})
 
-    add_custom_target(time-direct-write-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} 4 0 1 0 ${SIZE} ${ITER} ${REP})
-    add_custom_target(time-direct-write-huge-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} 5 0 1 1 ${SIZE} ${ITER} ${REP})
-    add_custom_target(time-bypass-write-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} 6 ${SIZE} 1 1 0 ${ITER} ${REP})
+    set(TEST_ID 0)
+    set(INTERFACE 0)
+    set(RW 0)
+    set(BUFTYPE 0)
+    add_custom_target(time-direct-read-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
-    add_custom_target(time-direct-read-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} 11 0 0 0 ${SIZE} ${ITER} ${REP})
-    add_custom_target(time-direct-read-huge-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} 12 0 0 1 ${SIZE} ${ITER} ${REP})
-    add_custom_target(time-bypass-read-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} 13 0 0 0 ${SIZE} ${ITER} ${REP})
+    set(TEST_ID 1)
+    set(INTERFACE 0)
+    set(RW 0)
+    set(BUFTYPE 1)
+    add_custom_target(time-direct-read-huge-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
+
+    set(TEST_ID 2)
+    set(INTERFACE 1)
+    set(RW 0)
+    set(BUFTYPE 0)
+    add_custom_target(time-bypass-read-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
+
+    set(TEST_ID 3)
+    set(INTERFACE 0)
+    set(RW 1)
+    set(BUFTYPE 0)
+    add_custom_target(time-direct-write-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
+
+    set(TEST_ID 4)
+    set(INTERFACE 0)
+    set(RW 1)
+    set(BUFTYPE 1)
+    add_custom_target(time-direct-write-huge-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
+
+    set(TEST_ID 5)
+    set(INTERFACE 1)
+    set(RW 1)
+    set(BUFTYPE 0)
+    add_custom_target(time-bypass-write-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
     add_custom_target(time-transfer-stats-${SIZE} COMMAND bash ${TIME_TRANSFER_STATS_SH} ${TIME_TRANSFER_STATS_PY} ${SIZE})
 endforeach()
