--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -84,36 +84,41 @@ foreach(SIZE ${SIZES})
     set(INTERFACE 0)
     set(RW 0)
     set(BUFTYPE 0)
+    set(TEST_ID time-direct-read-${SIZE})
     add_custom_target(time-direct-read-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
     set(TEST_ID 1)
     set(INTERFACE 0)
     set(RW 0)
     set(BUFTYPE 1)
+    set(TEST_ID time-direct-read-huge-${SIZE})
     add_custom_target(time-direct-read-huge-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
     set(TEST_ID 2)
     set(INTERFACE 1)
     set(RW 0)
     set(BUFTYPE 0)
+    set(TEST_ID time-bypass-read-${SIZE})
     add_custom_target(time-bypass-read-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
     set(TEST_ID 3)
     set(INTERFACE 0)
     set(RW 1)
     set(BUFTYPE 0)
+    set(TEST_ID time-direct-write-${SIZE})
     add_custom_target(time-direct-write-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
-    set(TEST_ID 4)
     set(INTERFACE 0)
     set(RW 1)
     set(BUFTYPE 1)
+    set(TEST_ID time-direct-write-huge-${SIZE})
     add_custom_target(time-direct-write-huge-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
     set(TEST_ID 5)
     set(INTERFACE 1)
     set(RW 1)
     set(BUFTYPE 0)
+    set(TEST_ID time-bypass-write-${SIZE})
     add_custom_target(time-bypass-write-${SIZE} COMMAND bash ${TIME_TRANSFER_METHODS_SH} ${TIME_TRANSFER_METHODS_EXEC} ${TEST_ID} ${INTERFACE} ${RW} ${BUFTYPE} ${SIZE} ${ITER} ${REP})
 
     add_custom_target(time-transfer-stats-${SIZE} COMMAND bash ${TIME_TRANSFER_STATS_SH} ${TIME_TRANSFER_STATS_PY} ${SIZE})
